--- a/src/index.html
+++ b/src/index.html
@@ -336,13 +336,76 @@
 	</section>
 	<section class="events-section">
 		<div class="container">
-			<h2 class="section-title">
+			<h2 class="sub-section-title text-center">
+				Where to meet us
 			</h2>
+			<div class="row events">
+				<div class="col-12 col-md-6 col-lg-4 event-col">
+					<div class="event">
+						<div class="event-date">
+							<div class="event-day">4-7</div>
+							<div class="event-month">Nov</div>
+						</div>
+						<div class="event-descr">
+							<div class="event-place">Lisbon PT</div>
+							<h5 class="event-name">Web Summit</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 event-col">
+					<div class="event">
+						<div class="event-date">
+							<div class="event-day">23-24</div>
+							<div class="event-month">Nov</div>
+						</div>
+						<div class="event-descr">
+							<div class="event-place">Basel CH</div>
+							<h5 class="event-name">Blockchain Leadership Summit</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 event-col">
+					<div class="event">
+						<div class="event-date">
+							<div class="event-day">29-30</div>
+							<div class="event-month">Nov</div>
+						</div>
+						<div class="event-descr">
+							<div class="event-place">BERLIN DE</div>
+							<h5 class="event-name">Techcrunch Disrupt Berlin</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 event-col">
+					<div class="event">
+						<div class="event-date">
+							<div class="event-day">4-5</div>
+							<div class="event-month">Dec</div>
+						</div>
+						<div class="event-descr">
+							<div class="event-place">Helsinki FI</div>
+							<h5 class="event-name">Sluch</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 event-col">
+					<div class="event">
+						<div class="event-date">
+							<div class="event-day">5-6</div>
+							<div class="event-month">Dec</div>
+						</div>
+						<div class="event-descr">
+							<div class="event-place">London GB</div>
+							<h5 class="event-name">FinTech Connect</h5>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="faq-section">
 		<div class="container">
-			<h2 class="section-title">
+			<h2 class="sub-section-title">
 			</h2>
 		</div>
 	</section>
