--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 <header class="header">
 	<div class="container">
 		<div class="inner-wrap">
-			<a href="#" class="logo"><img src="" alt="Logo"></a>
+			<a href="#" class="logo"><img src="images/logo.png" alt="Logo"></a>
 			<div class="main-navigation">
 				<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
-							class="icon"></span></a>
+							class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
 				<ul class="main-nav">
 					<li><a href="#" class="main-nav-link">STO</a></li>
 					<li><a href="#" class="main-nav-link">Roadmap</a></li>
@@ -36,7 +36,7 @@
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
-				<a href="#" class="learn-more-link"><span class="icon"><img src="" alt=""></span><span
+				<a href="#" class="learn-more-link"><span class="icon"><i class="fa fa-angle-down" aria-hidden="true"></i></span><span
 							class="text">Learn more</span></a><br>
 				<a href="" class="arr-link">Or get whitelisted &gt;</a>
 			</div>
@@ -484,9 +484,11 @@
 	<section class="subscribe-section">
 		<div class="container">
 			<h2 class="section-title">
-				<span class="top-text"></span>
-				<span class="bottom-text"></span>
+				<span class="top-text">Accessible</span>
+				<span class="bottom-text">Want to know more?</span>
 			</h2>
+			<h4 class="subscribe-title">Sign up now and stay up to date with the latest news!</h4>
+			<a href="" class="btn btn-light subscribe-btn">Enter your email to get whitelisted </a>
 		</div>
 	</section>
 </div>
@@ -494,6 +496,5 @@
 <body>
 <script type="text/javascript" src="js/libs.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-
 </body>
 </html>
