--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,8 @@
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
-				<a href="#" class="learn-more-link"><span class="icon"><i class="fa fa-angle-down" aria-hidden="true"></i></span><span
+				<a href="#" class="learn-more-link"><span class="icon"><i class="fa fa-angle-down"
+																																	aria-hidden="true"></i></span><span
 							class="text">Learn more</span></a><br>
 				<a href="" class="arr-link">Or get whitelisted &gt;</a>
 			</div>
@@ -48,15 +49,18 @@
 				<span class="top-text">Discover Bitwala</span>
 				<span class="bottom-text">The crypto-first bank</span>
 			</h2>
-			<div class="section-descr">
-				<h3 class="descr-title">Safe, fast, transparent and live!</h3>
+		</div>
+		<div class="section-descr">
+			<img class="section-img" src="images/mobile-screens.png" alt="">
+			<div class="container abs-container">
+				<h3 class="descr-title">Safe, fast, <br> transparent and live!</h3>
 				<div class="counter">
-					<span class="count">40,000</span>
-					<span class="descr">Early adopters and counting</span>
+					<div class="count">40,000</div>
+					<div class="descr">Early adopters and counting</div>
 				</div>
 				<div class="registration">
 					<h4 class="registration-title">Create your own Bitwala account today</h4>
-					<a href="#" class="registration-link"></a>
+					<a href="#" class="arr-link registration-link">Sign up now &gt;</a>
 				</div>
 			</div>
 		</div>
@@ -411,12 +415,14 @@
 				<div class="card">
 					<div class="card-header" id="headingOne">
 						<h2 class="mb-0">
-							<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+							<button class="btn btn-link" type="button" data-toggle="collapse"
+											data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
 								What is Bitwala?
 							</button>
 						</h2>
 					</div>
-					<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+					<div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+							 data-parent="#accordionExample">
 						<div class="card-body">
 							Content
 						</div>
@@ -425,12 +431,14 @@
 				<div class="card">
 					<div class="card-header" id="headingTwo">
 						<h2 class="mb-0">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+											data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 								Is the platform live? Where can I sign up?
 							</button>
 						</h2>
 					</div>
-					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+							 data-parent="#accordionExample">
 						<div class="card-body">
 							Content 2
 						</div>
@@ -439,12 +447,15 @@
 				<div class="card">
 					<div class="card-header" id="headingThree">
 						<h2 class="mb-0">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+											data-target="#collapseThree" aria-expanded="false"
+											aria-controls="collapseThree">
 								What are ETOs (Equity Token Offering)?
 							</button>
 						</h2>
 					</div>
-					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+					<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+							 data-parent="#accordionExample">
 						<div class="card-body">
 							Content 3
 						</div>
@@ -453,12 +464,15 @@
 				<div class="card">
 					<div class="card-header" id="headingFour">
 						<h2 class="mb-0">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+							<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+											data-target="#collapseFour" aria-expanded="false"
+											aria-controls="collapseFour">
 								When will the token sale take place?
 							</button>
 						</h2>
 					</div>
-					<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+					<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+							 data-parent="#accordionExample">
 						<div class="card-body">
 							Content 4
 						</div>
@@ -467,12 +481,15 @@
 				<div class="card">
 					<div class="card-header" id="headingFive">
 						<h2 class="mb-0">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+							<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+											data-target="#collapseFive" aria-expanded="false"
+											aria-controls="collapseFive">
 								How can I participate?
 							</button>
 						</h2>
 					</div>
-					<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+					<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+							 data-parent="#accordionExample">
 						<div class="card-body">
 							Content 3
 						</div>
