--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,10 @@
 				<span class="top-text">Introducing</span>
 				<span class="bottom-text">Bitwala Token Offering</span>
 			</h2>
-			<div class="section-body">
+		</div>
+			<div class="section-descr">
+				<img class="section-img" src="images/graphic-market-growth.png" alt="">
+				<div class="container abs-container">
 				<div class="quotation">
 					<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
 						available for trading on a blockchain by 2025” </p>
