--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,9 @@
 			<div class="container">
 				<div class="roadmap-items-wrap">
 					<div class="row">
-						<div class="col">
+						<div class="col col-md-6">
 							<div class="roadmap-item">
+								<img src="images/icon-trading.png" alt="trading">
 								<h4 class="item-title">Trade any asset</h4>
 								<div class="item-descr">The future of assets is tokenisation. We will create the
 									universal trading facility, providing access to unlimited tokenised assets, in one
@@ -124,23 +125,29 @@
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="roadmap-item"><h4 class="item-title">Banking without limit</h4>
+						<div class="col col-md-6">
+							<div class="roadmap-item">
+								<img src="images/icon-banking.png" alt="banking">
+								<h4 class="item-title">Banking without limit</h4>
 								<div class="item-descr">With our own German banking license we will provide even
 									faster and more convenient banking services to our users, without restrictions.
 								</div>
 							</div>
 						</div>
 						<div class="w-100"></div>
-						<div class="col">
-							<div class="roadmap-item"><h4 class="item-title">More choices, less hassle</h4>
+						<div class="col col-md-6">
+							<div class="roadmap-item">
+								<img src="images/icon-development.png" alt="development">
+								<h4 class="item-title">More choices, less hassle</h4>
 								<div class="item-descr">Our planned developments include mobile payment (Apple &
 									Google Pay), automatic taxation for crypto trading, lending and much more.
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<div class="roadmap-item"><h4 class="item-title">Anyone, anywhere</h4>
+						<div class="col col-md-6">
+							<div class="roadmap-item">
+								<img src="images/icon-globe.png" alt="globe">
+								<h4 class="item-title">Anyone, anywhere</h4>
 								<div class="item-descr">We truly believe that transfering value should be without
 									boundaries or exclusions. We started with the EU and will expand to 10 additional
 									markets.
