--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,9 @@
 				<span class="bottom-text">Bitwala Token Offering</span>
 			</h2>
 		</div>
-			<div class="section-descr">
-				<img class="section-img" src="images/graphic-market-growth.png" alt="">
-				<div class="container abs-container">
+		<div class="section-descr">
+			<img class="section-img" src="images/graphic-market-growth.png" alt="">
+			<div class="container abs-container">
 				<div class="quotation">
 					<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
 						available for trading on a blockchain by 2025” </p>
@@ -160,12 +160,50 @@
 		</div>
 	</section>
 	<section class="offering-section">
-		<div class="container">
-			<h2 class="section-title">
-				<span class="top-text">A unique opportunity</span>
-				<span class="bottom-text">BitwalaToken Offering</span>
-			</h2>
-		</div>
+		<section class="sub-section graphic-section">
+			<div class="container">
+				<h2 class="section-title">
+					<span class="top-text">A unique opportunity</span>
+					<span class="bottom-text">BitwalaToken Offering</span>
+				</h2>
+				<div class="token-graphic">
+					<img class="token-graphic-image" src="images/graphic-bitwala-token.png"
+							 alt="token graphic">
+					<div class="token-graphic-item left first">
+						<img class="token-graphic-icon" src="images/icon-key.png" alt="key">
+						<div class="separator"></div>
+						<div class="descr">
+							Tokens guarantee preferential participation rights in dividends and exit proceeds
+						</div>
+					</div>
+					<div class="token-graphic-item left second">
+						<img class="token-graphic-icon" src="images/icon-desktop.png" alt="desktop">
+						<div class="separator"></div>
+						<div class="descr">
+							Tokens are directly linked to Bitwala’s market value
+						</div>
+					</div>
+					<div class="token-graphic-item right third">
+						<img class="token-graphic-icon" src="images/icon-coin.png" alt="coin">
+						<div class="separator"></div>
+						<div class="descr">
+							Tokens provide rights similar to Zero-Coupon Convertible
+						</div>
+					</div>
+					<div class="token-graphic-item right fourth">
+						<img class="token-graphic-icon" src="images/icon-hand.png" alt="hand">
+						<div class="separator"></div>
+						<div class="descr">
+							Tokens are liquid and
+							easily tradable
+						</div>
+					</div>
+					<div class="token-graphic-descr">
+						The first fully German compliant Security Token.
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="sub-section documents-section">
 			<div class="container">
 				<h2 class="sub-section-title">Documents</h2>
@@ -175,6 +213,7 @@
 					<div class="col-sm-4 col-12">
 						<div class="document">
 							<div class="doc-head">
+								<img src="images/doc-icon.png" alt="document">
 							</div>
 							<div class="doc-body">
 								<div class="doc-number">01</div>
@@ -222,14 +261,14 @@
 				<div class="row no-gutters ts-items">
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<img src="" alt="">
+							<img class="ts-icon" src="images/icon-price-tag.png" alt="price" width="57">
 							<h5 class="ts-item-title">1 BWT = 1 EUR</h5>
 							<div class="ts-item-descr">Token nominal price</div>
 						</div>
 					</div>
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<img src="" alt="">
+							<img class="ts-icon" src="images/icon-currency.png" alt="currency" width="88">
 							<h5 class="ts-item-title">EUR, BTC, ETH</h5>
 							<div class="ts-item-descr">Accepted currencies</div>
 						</div>
@@ -237,24 +276,26 @@
 					<div class="w-100"></div>
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<img src="" alt="">
+							<img class="ts-icon" src="images/icon-speed.png" alt="speed" width="97">
 							<h5 class="ts-item-title">15m / 75m tokens</h5>
 							<div class="ts-item-descr">Soft-cap / Hard-cap</div>
 						</div>
 					</div>
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<img src="" alt="">
+							<img class="ts-icon" src="images/icon-pie-chart.png" alt="pie chart" width="75">
 							<h5 class="ts-item-title">10%</h5>
-							<div class="ts-item-descr">of all tokens generated for Team & Ambassadors</div>
+							<div class="ts-item-descr">of all tokens generated for Team & <br> Ambassadors</div>
 						</div>
 					</div>
 				</div>
 				<div class="row no-gutters ts-items subtotal">
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<h5 class="ts-item-title">Private sale</h5>
-							<div class="ts-item-descr">Accepted currencies</div>
+							<div class="ts-item-title-wrap">
+								<h5 class="ts-item-title">Private sale</h5><span class="marker">ongoing</span>
+							</div>
+							<div class="ts-item-descr">Minimum tickets size 100k tokens.</div>
 							<div class="ts-item-table">
 								<table class="table table-borderless">
 									<thead>
@@ -274,7 +315,7 @@
 									</tr>
 									<tr>
 										<td>15%</td>
-										<td>@100.000</td>
+										<td>100.000</td>
 									</tr>
 									</tbody>
 								</table>
@@ -283,28 +324,30 @@
 					</div>
 					<div class="col-sm-6 col-12">
 						<div class="ts-item">
-							<h5 class="ts-item-title">Private sale</h5>
-							<div class="ts-item-descr">Accepted currencies</div>
+							<div class="ts-item-title-wrap">
+								<h5 class="ts-item-title">Public sale Q2 2019</h5>
+							</div>
+							<div class="ts-item-descr">Minimum investment 500 tokens.</div>
 							<div class="ts-item-table">
 								<table class="table table-borderless">
 									<thead>
 									<tr>
 										<th scope="col">Bonus</th>
-										<th scope="col">Min Token Investment</th>
+										<th scope="col">Amt of Public Sale</th>
 									</tr>
 									</thead>
 									<tbody>
 									<tr>
-										<td>25%</td>
-										<td>2.500.000</td>
+										<td>10,0%</td>
+										<td>6.25%</td>
 									</tr>
 									<tr>
-										<td>20%</td>
-										<td>1.000.000</td>
+										<td>5,0%</td>
+										<td>18.75%</td>
 									</tr>
 									<tr>
-										<td>15%</td>
-										<td>@100.000</td>
+										<td>Full price</td>
+										<td>75%</td>
 									</tr>
 									</tbody>
 								</table>
