--- a/src/index.html
+++ b/src/index.html
@@ -373,6 +373,83 @@
 				<span class="top-text">Disruptive team</span>
 				<span class="bottom-text">Banking and blockchain veterans</span>
 			</h2>
+			<div class="team-members">
+				<div class="row justify-content-md-center">
+					<div class="col-12 col-md-4">
+						<div class="team-member">
+							<img src="images/rawpixel.png" alt="photo">
+							<div class="overlay">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">Chief Compliance Officer and Co-founder</div>
+								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
+									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								</div>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="team-member">
+							<img src="images/bryan-angelo.png" alt="photo">
+							<div class="overlay">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">Chief Compliance Officer and Co-founder</div>
+								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
+									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								</div>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="team-member">
+							<img src="images/ron-jake.png" alt="photo">
+							<div class="overlay">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">Chief Compliance Officer and Co-founder</div>
+								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
+									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								</div>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="team-member">
+							<img src="images/tamarcus-brown.png" alt="photo">
+							<div class="overlay">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">Chief Compliance Officer and Co-founder</div>
+								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
+									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								</div>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="team-member">
+							<img src="images/bryan-angelo.png" alt="photo">
+							<div class="overlay">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">Chief Compliance Officer and Co-founder</div>
+								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
+									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								</div>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="invitation">
+				Bitwala is growing! Meet the <a href="#">whole team</a> or <a href="#">join us</a>!
+			</div>
 		</div>
 	</section>
 	<section class="partners-section">
