--- a/src/index.html
+++ b/src/index.html
@@ -455,9 +455,33 @@
 	<section class="partners-section">
 		<div class="container">
 			<h2 class="section-title">
-				<span class="top-text"></span>
-				<span class="bottom-text"></span>
+				<span class="top-text">Notable</span>
+				<span class="bottom-text">Investors and partners</span>
 			</h2>
+		</div>
+		<div class="partners">
+			<div class="container">
+				<div class="row no-gutters">
+						<div class="col-md-4 partner-item b-bottom b-right">
+							<img src="images/logo-alst-grey.png" alt="alst">
+						</div>
+						<div class="col-md-4 partner-item b-bottom b-right crop-corners">
+							<img src="images/logo-dcg-grey.png" alt="dcg">
+						</div>
+						<div class="col-md-4 partner-item b-bottom">
+							<img src="images/logo-coparion-grey.png" alt="coparion">
+						</div>
+						<div class="col-md-4 partner-item b-right">
+							<img src="images/logo-earlybird-grey.png" alt="earlybird">
+						</div>
+						<div class="col-md-4 partner-item b-right">
+							<img src="images/logo-htgf-grey.png" alt="htgf">
+						</div>
+						<div class="col-md-4 partner-item">
+							<img src="images/logo-solaris-bank-grey.png" alt="solaris">
+						</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="media-section">
