--- a/src/index.html
+++ b/src/index.html
@@ -381,11 +381,13 @@
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+								<div class="descr">Jan studied economics and has over 5 years of crypto and
+									blockchain
 									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
 									PwC. Jan handles compliance, customer success and finances together with our CFO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -395,11 +397,13 @@
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+								<div class="descr">Jan studied economics and has over 5 years of crypto and
+									blockchain
 									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
 									PwC. Jan handles compliance, customer success and finances together with our CFO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -409,11 +413,13 @@
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+								<div class="descr">Jan studied economics and has over 5 years of crypto and
+									blockchain
 									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
 									PwC. Jan handles compliance, customer success and finances together with our CFO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -423,11 +429,13 @@
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+								<div class="descr">Jan studied economics and has over 5 years of crypto and
+									blockchain
 									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
 									PwC. Jan handles compliance, customer success and finances together with our CFO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -437,11 +445,13 @@
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and blockchain
+								<div class="descr">Jan studied economics and has over 5 years of crypto and
+									blockchain
 									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
 									PwC. Jan handles compliance, customer success and finances together with our CFO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -462,24 +472,24 @@
 		<div class="partners">
 			<div class="container">
 				<div class="row no-gutters">
-						<div class="col-md-4 partner-item b-bottom b-right">
-							<img src="images/logo-alst-grey.png" alt="alst">
-						</div>
-						<div class="col-md-4 partner-item b-bottom b-right crop-corners">
-							<img src="images/logo-dcg-grey.png" alt="dcg">
-						</div>
-						<div class="col-md-4 partner-item b-bottom">
-							<img src="images/logo-coparion-grey.png" alt="coparion">
-						</div>
-						<div class="col-md-4 partner-item b-right">
-							<img src="images/logo-earlybird-grey.png" alt="earlybird">
-						</div>
-						<div class="col-md-4 partner-item b-right">
-							<img src="images/logo-htgf-grey.png" alt="htgf">
-						</div>
-						<div class="col-md-4 partner-item">
-							<img src="images/logo-solaris-bank-grey.png" alt="solaris">
-						</div>
+					<div class="col-md-4 partner-item b-bottom b-right">
+						<img src="images/logo-alst-grey.png" alt="alst">
+					</div>
+					<div class="col-md-4 partner-item b-bottom b-right crop-corners">
+						<img src="images/logo-dcg-grey.png" alt="dcg">
+					</div>
+					<div class="col-md-4 partner-item b-bottom">
+						<img src="images/logo-coparion-grey.png" alt="coparion">
+					</div>
+					<div class="col-md-4 partner-item b-right">
+						<img src="images/logo-earlybird-grey.png" alt="earlybird">
+					</div>
+					<div class="col-md-4 partner-item b-right">
+						<img src="images/logo-htgf-grey.png" alt="htgf">
+					</div>
+					<div class="col-md-4 partner-item">
+						<img src="images/logo-solaris-bank-grey.png" alt="solaris">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -487,9 +497,33 @@
 	<section class="media-section">
 		<div class="container">
 			<h2 class="section-title">
-				<span class="top-text"></span>
-				<span class="bottom-text"></span>
+				<span class="top-text">In the media</span>
+				<span class="bottom-text">What they are saying</span>
 			</h2>
+			<div class="row media-texts">
+				<div class="col col-md-4 text-center">
+					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+					ut labore et dolore magna aliqua.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“40.000 clients signed up for the new crypto banking service.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+					do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+				</div>
+			</div>
+			<div class="row media-images align-items-center">
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-wall-street.png" alt="wall street">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-cointelegraph.png" alt="cointelegraph">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-coindesk.png" alt="coindesk">
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="events-section">
