--- a/src/index.html
+++ b/src/index.html
@@ -644,7 +644,7 @@
 		<div class="container">
 			<h2 class="sub-section-title text-center">FAQ
 			</h2>
-			<div class="accordion faq-accordion" id="accordionExample">
+			<div class="accordion faq-accordion" id="accordionFaq">
 				<div class="card">
 					<div class="card-header" id="headingOne">
 						<h2 class="mb-0">
@@ -654,8 +654,8 @@
 							</button>
 						</h2>
 					</div>
-					<div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-							 data-parent="#accordionExample">
+					<div id="collapseOne" class="collapse faq-content" aria-labelledby="headingOne"
+							 data-parent="#accordionFaq">
 						<div class="card-body">
 							Content
 						</div>
@@ -670,8 +670,8 @@
 							</button>
 						</h2>
 					</div>
-					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-							 data-parent="#accordionExample">
+					<div id="collapseTwo" class="collapse faq-content" aria-labelledby="headingTwo"
+							 data-parent="#accordionFaq">
 						<div class="card-body">
 							Content 2
 						</div>
@@ -687,8 +687,8 @@
 							</button>
 						</h2>
 					</div>
-					<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-							 data-parent="#accordionExample">
+					<div id="collapseThree" class="collapse faq-content" aria-labelledby="headingThree"
+							 data-parent="#accordionFaq">
 						<div class="card-body">
 							Content 3
 						</div>
@@ -704,10 +704,13 @@
 							</button>
 						</h2>
 					</div>
-					<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-							 data-parent="#accordionExample">
+					<div id="collapseFour" class="collapse faq-content" aria-labelledby="headingFour"
+							 data-parent="#accordionFaq">
 						<div class="card-body">
-							Content 4
+							BitwalaToken Offering is currently ongoing private sale. Private sale is dedicated to
+							all eligible investor with a minimum participation of 100,000 tokens. We plan to
+							launch an open sale by Q2 2019. The minimum investment threshold is planned at 500
+							tokens.
 						</div>
 					</div>
 				</div>
@@ -721,8 +724,8 @@
 							</button>
 						</h2>
 					</div>
-					<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
-							 data-parent="#accordionExample">
+					<div id="collapseFive" class="collapse faq-content" aria-labelledby="headingFive"
+							 data-parent="#accordionFaq">
 						<div class="card-body">
 							Content 3
 						</div>
